Stored messages as json

--- a/ChatFrontEnd.html
+++ b/ChatFrontEnd.html
@@ -2,7 +2,7 @@
 <head>
     <style>
         body {
-            background-color: rgb(39, 0, 52);
+            background-color: rgb(152, 201, 163);
         }
         #submitform {
             position: fixed;
@@ -12,8 +12,8 @@
             bottom: 1vh;
             left: 50%;
             transform: translateX(-50%);
+            size:2vh;
             align-items: flex-end;
-
         }
         #displaymessages {
             display: flex;
@@ -22,11 +22,12 @@
             width: 50vw;
             left: 50%;
             transform: translateX(50%);
-            background-color: rgb(154, 2, 205);
+            background-color: rgb(221, 231, 199);
             font-size: x-large;
             box-sizing: border-box; 
             padding: 10px; 
             overflow-y: auto;
+            border-radius: 20px;
         }
     </style>
     
